kubernetes/service-cla-assistant-stage.yaml
apiVersion: v1
kind: Service
metadata:
  name: cla-assistant-stage-service
spec:
  selector:
    app: cla-assistant-stage
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
