kubernetes/ingress-cla-assistant-stage.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cla-ingress
  annotations:
    cert.gardener.cloud/purpose: managed
    cert.gardener.cloud/issuer: cla-stage-garden
    dns.gardener.cloud/class: garden
    dns.gardener.cloud/dnsnames: stage2.cla-assistant.io
spec:
  tls:
    - hosts:
        - stage2.cla-assistant.io
      secretName: tls-stage2-cla-assistant
  rules:
    - host: stage2.cla-assistant.io
      http:
        paths:
          - backend:
              serviceName: cla-assistant-stage-service
              servicePort: 5000
